First steps of Styling the UI, created global container and color pallete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     />
     </head>
-    <body>
-        <div id="root"></div>
+    <body style="background-color:#D2EDFF">
+        <div id="root" ></div>
     </body>
 </html>
