Edited search bar, aligned some items and add styling
Co-authored-by: MirandaJaramillo mirandajaramillomorales@gmail.com

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     />
     </head>
-    <body>
-        <div id="root"></div>
+    <body style="background-color: #e1f6ff">
+            <div id="root"></div>
     </body>
 </html>
