final style changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     />
     </head>
-    <body style="background-color: #e1f6ff">
+    <body style="background-color: #f0f6f9">
             <div id="root"></div>
     </body>
 </html>
